classDiagram
    %% Module example_pkg.models
    class Order {
        +id int
        +user User
        +items List[OrderItem]
        +status str
        +created_at datetime
        --
        +add_item(product: Product, quantity: int) OrderItem
        +total_amount() float
        +set_status(new_status: str) None
    }
    class OrderItem {
        +product Product
        +quantity int
        --
        +total() float
    }
    class PremiumUser {
        +membership_level str
        +bonus_points int
        #_vip_code str
        --
        +__init__(id: int, email: str, name: str, membership_level: str)
        +add_points(points: int) None
        +get_discount() float
    }
    class Product {
        +id int
        +name str
        +price float
        +stock int
        +description Optional[str]
        --
        +is_available() bool
        +apply_discount(percent: float) float
    }
    class User {
        +id int
        +email str
        +name str
        +created_at datetime
        #_password_hash str
        --
        +greet() str
        #_validate() bool
        +is_active() bool
    }
    User <|-- PremiumUser
    OrderItem *-- Product : product
    Order *-- User : user
    Order o-- OrderItem : items
    Order ..> Product : add_item param
    Order ..> OrderItem : add_item return